# topos-cli

./: .env  .env_dev  .env_template  .gitignore  LICENSE  README.md  accounts.json  cert.pem  config.yaml  default.nix  flake.nix  justfile  key.pem  menu_bar_app.py  pyproject.toml  setup.cfg  setup.py
_conv_cache/: cache__HiAIB1Ag6PFn.pkl  cache__shAfFEN2sdSn.pkl
chat_server/managers/: missed_message_manager.py
chat_server/services/: missed_message_service.py
chat_server/services/startup/: initialize_database.py
chat_server/utils/: utils.py
nix/overlays/pystray/: default.nix
nix/services/: topos-service.nix
overlays/pyobjc-core/: build.nix  default.nix
overlays/pystray/: build.nix  default.nix
overlays/tkinter/: default.nix
scripts/: install.sh  update_topos.sh
tests/database/: postgres_init_test.py
topos/: .env  .env_dev  api-bak.py  api.py  cli.py  config.py  config.yaml  main.py  requirements.txt
topos/Cybi/: cybi.py
topos/FC/: argument_detection.py  cache_manager.py  conversation_cache_manager.py  ontological_feature_detection.py  relationships.py  semantic_compression.py  similitude_module.py
topos/FC/_cache/: cache__0a63d4946bc44b04a974493806c27f003bd2cfb99163b3396eaf51df50c827f7.pkl  cache__37785727bdb14e0cf735e52e8120d73d47d1223020984e7ed1317c0f9fe31839.pkl  cache__46d188b37c7f13cba849627c19a785bf03f5d3b9bb5a71b007d13368848b505f.pkl  cache__48e178cc5fa3dd83857cd5ac7382bac15cea5f7d133f8b12a4a3fb02a8bef142.pkl  cache__53c49505ed3d2fd0808acc71da8b7ea1a2cca2bf1fe14e6aaac7dcb1de737479.pkl  cache__64a3068cf79c224a43d2e166c54f59bad6ee174a3e27dbe96874f57be7744fb9.pkl  cache__807e1c3364f5b5dcf5e2420e078173078ccef76c87adade0108835d91cad8b75.pkl  cache__852cb5b0468d04fc18fcb3ec8afea8a3c718346ff5467aa79ebce6fc40142354.pkl  cache__8da4e6617cbb142148556847cef930d52f04297517a83d033164797a805cb430.pkl  cache__8f828ece20ddd784f022eff5bf9d11c7bdb05f89a10bac1182510182f016c264.pkl  cache__97d8bd430beed046419018fa940e746facf4175097eadfa504aba07ebb3c42aa.pkl  cache__a25c396769c76dda47bef041c5aae5e1919818f6b15228fa5963a0472cfb8463.pkl  cache__a66ca409e4e0f6a2f76915af1b138901f1645074b46055afb1f2ac52630960b6.pkl  cache__ad2514c1b75bbdf48398bbb4b61c2fdcee953bae60db80e35f9b97d5f479a3f3.pkl  (+8 more)
topos/_conv_cache/: .gitignore
topos/api/: api.py  api_routes.py  debate_routes.py  p2p_chat_routes.py  websocket_handlers.py
topos/app/: menu_bar_app.py
topos/channel/: channel_engine.py  debatesim.py
topos/chat_api/: api.py  chat_server.py  client.py  fastapi_client.py  fastapi_client_message_listener.py  fastapi_server.py  server.py  session_manager_class_test.py
topos/downloaders/: spacy_loader.py
topos/generations/: chat_gens.py  chat_model.py  groq_chat.py  llm_client.py  ollama_chat.py  openai_chat.py
topos/lobby/: lobby_server.py
topos/models/: llm_classes.py  models.py
topos/services/: message_processing.py
topos/services/basic_analytics/: text_classifiers.py  (+1 more)
topos/summaries/: summaries.py
topos/test/: humor_classifier_test.py  test_app_state.py  test_argument_detection.py  test_argument_segmentation.py  test_argument_segmentation_12.py  test_argument_segmentation_similarity.py  test_database_postgres.py  test_database_supabase.py  test_debate_flow.py  test_debate_flow_2.py  test_debate_flow_3.py  test_debate_flow_3_presidential_debate_jun_2024.py  test_debate_flow_4_evolution.py  test_debate_flow_5_database_comparison.py  test_debate_flow_jwt_token.py  test_ontological_feature_detection.py  test_vector_argument_separation.py  test_vector_argument_separation_2.py
topos/utilities/: utils.py
topos/utils/: check_for_update.py  utils.py
(+34 files in other folders)
