[tool.poetry]
name = "topos"
version = "0.1"
description = "The official Python client for Topos."
authors = ["Dialogues <info@dialogues.ai>"]
license = "MIT"
readme = "README.md"
homepage = "https://dialogues.ai"

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.27.0"
fastapi = "0.109.2"
langchain = "0.1.4"
uvicorn = "0.20.0"
websockets = "11.0.3"
ollama = "0.1.9"
spacy = "3.7.2"
transformers = "4.40.2"
emoji = "0.6.0"
pyyaml = "6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
pytest-cov = "^4.1.0"
pytest-httpserver = "^1.0.8"
pillow = "^10.2.0"
ruff = "^0.1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
topos = "topos.cli:main"
    
