[metadata]
name = topos
version = 0.2.3
author = Jonny Johnson
author_email = jonnyjohnson1@gmail.com
description = For interacting with Topos tooling
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
include_package_data = True